# text2SQL

./: .env.example  .gitignore  README.md  import_csv_to_sqlite.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py
app/database/: connection.py  schema_loader.py
app/llm/: prompt_builder.py  sql_generator.py
app/services/: db_builder.py  query_executor.py  sql_validator.py
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
