[project]
name = "text-to-sql-ai"
version = "0.1.0"
description = "AI-powered Text-to-SQL system using FastAPI, SQLAlchemy, and Groq."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.35",
    "groq>=0.11.0",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.0",
    "python-multipart>=0.0.10",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

